<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/conteudo_principal"
        android:focusableInTouchMode="true"
        tools:context=".ui.activitys.MainActivity">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarPrincipal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <ScrollView android:id="@+id/scrollMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.CoordinatorLayout
                    android:id="@+id/coordinatorMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/linear_form"
                        android:layout_marginTop="?attr/actionBarSize"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/txtCep"
                            android:text="@string/cep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:labelFor="@+id/et_cep"/>

                    <EditText
                            android:id="@+id/et_cep"
                            android:inputType="number"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:drawableStart="@drawable/ic_search"
                            android:drawableLeft="@drawable/ic_search"
                            android:drawablePadding="3dp"
                            android:hint="@string/digite_o_cep"
                            android:layout_marginTop="5dp"
                            android:maxLength="9"
                            android:padding="8dp"
                            android:background="@drawable/custom_edit_round"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <Button
                            android:id="@+id/btn_cep"
                            android:text="@string/consultar"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/botao_roxo"
                            android:textColor="#fff"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>

            <FrameLayout
                    android:id="@+id/fragment_endereco"
                    android:layout_below="@+id/coordinatorMain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </RelativeLayout>

    </ScrollView>

    <FrameLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
    </FrameLayout>

</RelativeLayout>



